onboarding-4/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: _____
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: _____
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: _____
                port:
                  number: _____
